--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   spider: ^2.2.2
   flutter_svg: ^1.1.3
   flutter_screenutil: ^5.5.3+2
+  provider: ^6.0.3
+  flutter_bloc: ^8.0.1
+  bloc: ^8.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
