--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.1.0
   shared_preferences: ^2.0.15
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
 
 dev_dependencies:
   flutter_test:
